# uticen-lite

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE  PRODUCT-MAP.md  README.md  STRATEGY.md  pyproject.toml  ruff.toml  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-merge.yml  autofix.yml  ci.yml  dependabot-auto-merge.yml  release-gate.yml  release.yml  restrict-pr-authors.yml  sonarqube.yml
contract/: README.md  bundle.schema.json
controlflow_sdk/: __init__.py
controlflow_sdk/adapters/: __init__.py  base.py  files.py  xlsx_export.py
controlflow_sdk/ai/: __init__.py  draft.py  providers.py
controlflow_sdk/bundle/: __init__.py  assemble.py
controlflow_sdk/cli/: __init__.py  _store_guard.py  build_cmd.py  import_cmd.py  run_cmd.py  scaffold.py  upgrade_cmd.py
controlflow_sdk/model/: __init__.py  control.py  run.py  violation.py  workpaper.py
controlflow_sdk/pipeline/: compile.py  lint.py  materialize.py  model.py  procedures.py  rowcounts.py
controlflow_sdk/plane/: __main__.py  app.py  coercion_check.py  ingest.py
controlflow_sdk/project/: discovery.py  loader.py
controlflow_sdk/render/: html.py  markdown.py
controlflow_sdk/rules/: evaluate.py  render_rule.py  resolve.py  spec.py
controlflow_sdk/runner/: __init__.py  execute.py  runlog.py
controlflow_sdk/schema/: control.schema.json  sources.schema.json
controlflow_sdk/store/: db.py  export_service.py  import_service.py  loader.py  migrations.py  repo.py  run_service.py
controlflow_sdk/upgrade/: check.py  command.py  detect.py  spawn.py  version.py
docs/: CONTRACT.md  INSTALL.md
docs/learnings/: 0001-stay-compatible-with-the-controlflow-app.md  0001-stay-compatible-with-the-uticen-app.md  0002-fastapi-sqlite-per-handler-connection.md  0003-hatch-wheel-no-force-include-package-data.md  0004-ordering-seam-audit-positional-consumers.md  0005-control-plane-reuses-workpaper-design-tokens.md  0006-evolve-source-state-without-touching-the-bundle.md  0007-control-plane-editors-are-server-rendered-sub-route-tabs.md  0008-run-untrusted-authored-code-behind-three-layers.md  0009-prove-generated-code-equals-the-interpreter.md  0010-new-authoring-representation-compiles-to-the-existing-artifact.md  0011-match-condition-value-type-to-the-columns-loaded-dtype.md  0012-rerun-e2e-browser-smoke-on-htmx-swap-changes.md  0013-derived-editor-state-must-round-trip-and-tolerate-incomplete-graphs.md  0014-audit-every-singular-accessor-call-site-when-a-model-gains-a-plural.md  0015-verdicts-and-thresholds-are-render-store-only-never-in-the-bundle.md  0016-self-replacing-process-upgrades-via-a-detached-helper.md  0017-opt-in-egress-must-default-off-reword-the-claim-and-prove-off-makes-no-call.md  0018-capture-learnings-before-opening-an-auto-merging-pr.md  0019-put-the-worktree-on-pythonpath-when-verifying-its-code-with-an-adhoc-script.md  0020-keep-violation-details-json-native-sanitize-at-from-raw.md  0021-detect-join-misses-via-a-brought-marker-not-the-coalesced-key.md  0022-bump-the-store-schema-version-constant-when-adding-a-migration-step.md  0023-thread-a-new-upsert-column-through-every-writer-or-it-nulls-on-update.md  0024-file-ingest-funnel-catches-both-missing-engine-and-corrupt-content-at-every-route.md  0025-one-time-snapshot-to-file-honors-the-no-live-connectors-non-goal.md  0026-isolate-plaintext-secrets-warn-loudly-and-guard-the-bundle-boundary-with-a-positive-test.md  0027-adversarially-verify-ai-filed-review-issues-against-the-real-repo.md  0028-key-order-refactors-are-bundle-safe-only-under-sort-keys-serialization.md  0029-trust-boundary-teeth-check-uses-an-include-false-sentinel-column.md  0030-incremental-dag-recompute-via-content-addressed-ancestor-closure-keys.md  0031-changing-the-northwind-demo-cardinality-fans-out-to-many-count-assertions.md  0032-qualify-component-input-rules-to-beat-the-base-attribute-selector.md  0033-never-500-is-convert-at-source-plus-backstop-not-an-exception-allowlist.md  0034-triage-works-for-me-bugs-with-a-fresh-install-then-treat-corrupted-state-as-first-class.md  0035-fan-out-run-per-procedure-aggregate-only-when-multi-distinct-items-examined.md  0036-sole-auto-derived-positional-label-is-empty-for-render-bundle-parity.md  0037-assert-client-persisted-write-path-never-fake-state-to-dodge-a-race.md  0038-thread-a-new-context-key-through-every-render-site-of-a-shared-partial.md  0039-a-plan-that-deviates-from-its-spec-must-enumerate-every-dropped-spec-requirement.md  (+8 more)
examples/northwind-trading/: README.md  cflow.yaml  controlplane.db  sources.yaml
scripts/: export_contract.py
tests/: test_contract_export.py  test_public_api.py  test_smoke.py  test_steps_trust_boundary.py
tests/adapters/: test_files.py  test_inspect.py  test_parquet_xlsx.py  test_xlsx_export.py
tests/ai/: test_draft.py  test_providers.py
tests/bundle/: test_archive.py  test_assemble.py
tests/cli/: test_build_cmd.py  test_cli.py  test_import_cmd.py  test_run_cmd.py  test_upgrade_cmd.py
tests/e2e/: conftest.py  test_multi_procedure.py  test_record_trace_smoke.py  test_smoke.py  test_step_inspector_smoke.py  test_update_indicator_modal.py
tests/examples/: test_northwind.py
tests/model/: test_control.py  test_population.py  test_run.py  test_threshold.py  test_violation.py  test_workpaper.py
tests/pipeline/: test_compile.py  test_compile_procedures.py  test_lint.py  test_materialize.py  test_model.py  test_node_title.py  test_procedures_bands.py  test_procedures_model.py  test_rowcounts.py  test_trace.py  test_validation_node_errors.py
tests/plane/: conftest.py  test_ai.py  test_app.py  test_branding.py  test_controls.py  test_dashboard_upgrade.py  test_export.py  test_fetch.py  test_field_editors.py  test_flowchart_node_click.py  test_ingest.py  test_logic_bands.py  test_logic_builder_errors.py  test_logic_trace.py  test_logic_view.py  test_node_rename.py  test_packaging.py  test_pipeline_editor.py  test_pipeline_save.py  test_pipeline_steps.py  test_procedures_panel.py  test_rule_builder.py  test_runs.py  (+13 more)
uticen_lite/: __init__.py
(+282 files in other folders)
