[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "controlflow-sdk"
version = "0.1.0"
description = "Author and run full-population control tests; export audit-grade workpapers importable into ControlFlow."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Schweyer Tech" }]
dependencies = [
  "jsonschema>=4.20",
  "pyyaml>=6.0",
  "pandas>=2.0",
]

[project.optional-dependencies]
adapters = ["openpyxl>=3.1", "pyarrow>=14.0"]
plane = ["fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.1", "python-multipart>=0.0.9"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.8", "types-PyYAML", "types-jsonschema",
  "pandas-stubs>=2.0", "build>=1.0", "twine>=5.0",
  "fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.1", "python-multipart>=0.0.9",
  "httpx>=0.27"]

[project.scripts]
cflow = "controlflow_sdk.cli:main"
controlplane = "controlflow_sdk.plane.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["controlflow_sdk"]


[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Using .httpx. with .starlette.testclient.:starlette.exceptions.StarletteDeprecationWarning",
]
