[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "controlflow-sdk"
version = "0.1.0"
description = "Author and run full-population control tests; export audit-grade workpapers importable into ControlFlow."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Schweyer Tech" }]
dependencies = [
  "jsonschema>=4.20",
  "pyyaml>=6.0",
  "pandas>=2.0",
]

[project.optional-dependencies]
adapters = ["openpyxl>=3.1", "pyarrow>=14.0"]
plane = ["fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.1", "python-multipart>=0.0.9"]
# Optional AI-assisted authoring backends. The SDKs are imported lazily inside
# controlflow_sdk/ai/ (never at import time), so the package runs without this
# extra; Ollama uses the stdlib only. (Learning 0003: keep the core dep-free.)
ai = ["anthropic>=0.50", "openai>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.8", "types-PyYAML", "types-jsonschema",
  "pandas-stubs>=2.0", "build>=1.0", "twine>=5.0",
  "fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.1", "python-multipart>=0.0.9",
  "httpx>=0.27", "anthropic>=0.50", "openai>=1.40"]

[project.scripts]
cflow = "controlflow_sdk.cli:main"
controlplane = "controlflow_sdk.plane.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["controlflow_sdk"]

# Ship the Northwind demo inside the package so a pip-installed control plane can
# offer one-click "Load the demo" without a repo checkout. examples/ is the single
# source of truth (out-of-package → force-include is the correct tool; see
# docs/learnings/0003). Map only the files the demo loader needs.
[tool.hatch.build.targets.wheel.force-include]
"examples/northwind-trading/cflow.yaml" = "controlflow_sdk/_demo/northwind-trading/cflow.yaml"
"examples/northwind-trading/sources.yaml" = "controlflow_sdk/_demo/northwind-trading/sources.yaml"
"examples/northwind-trading/controls" = "controlflow_sdk/_demo/northwind-trading/controls"
"examples/northwind-trading/data" = "controlflow_sdk/_demo/northwind-trading/data"


[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Using .httpx. with .starlette.testclient.:starlette.exceptions.StarletteDeprecationWarning",
]
